moving forward with models

--- a/creed/templates/creed/Salary.html
+++ b/creed/templates/creed/Salary.html
@@ -2,11 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Page title
+    Выбор типа зарплаты
 {% endblock %}
 
 {% block content %}
-
+    {% formfields %}
     {% next_button %}
 
 {% endblock %}
