--- a/creed/templates/creed/WB.html
+++ b/creed/templates/creed/WB.html
@@ -2,11 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-    Page title
+Донос
 {% endblock %}
 
 {% block content %}
-
-    {% next_button %}
+{% formfields %}
+{% next_button %}
 
 {% endblock %}
