--- a/creed/templates/creed/Salary.html
+++ b/creed/templates/creed/Salary.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-    Выбор типа зарплаты
+    Выбор типа зарплаты. Период {{ player.round_number }} из {{ Constants.num_rounds }}
 {% endblock %}
 
 {% block content %}
