--- a/creed/templates/creed/WB.html
+++ b/creed/templates/creed/WB.html
@@ -2,10 +2,11 @@
 {% load otree static %}
 
 {% block title %}
-Донос
+Донос. Период {{ player.round_number }} из {{ Constants.num_rounds }}
 {% endblock %}
 
 {% block content %}
+    ВОТ СЮДА НАШ ТЕКСТ!
 {% formfields %}
 {% next_button %}
 
