--- a/creed/templates/creed/WB.html
+++ b/creed/templates/creed/WB.html
@@ -6,7 +6,16 @@
 {% endblock %}
 
 {% block content %}
-    ВОТ СЮДА НАШ ТЕКСТ!
+    После того, как Вы приняли решение о том, какую схему оплаты труда Вам выбрать для своих работников, каждый из Вас сможет увидеть решение одного случайно выбранного участника Вашей группы. Точно так же один из участников группы сможет увидеть Ваше решение о выборе схемы. Во-вторых, прежде, чем Вы увидите решение другого участника, Вам нужно принять решение о том, будете ли Вы информировать налоговые органы о его решении, если он выбрал серую “схему” оплаты труда.  Если Вы выберете решение об информировании при том условии, что игрок выбрал “серую” схему оплаты труда, то он будет оштрафован на 55 ECU.
+    На этом этапе Вы должны решить, будете ли Вы “информировать” или “не информировать” налоговые органы. Это действие абсолютно анонимно, так что никто из игроков не будет знать, какой выбор Вы сделали.
+
+
+
+{#    После того как каждый участник вашей группы принял решение о том какую схему оплаты своим работника выбрать, каждый из вас сможет увидеть решение одного случайно выбранного участника вашей группы.#}
+{#    Точно так же, один из участников вашей группы сможет увидеть ваше решение о выборе схемы.#}
+{#    Прежде чем вы увидите решение другого участника вам нужно принять решение о том, будете ли вы информировать власти о его решении если он выбрал серую схему. Если вы выберете решение об информировании а он выбрал серую схему, то он будет оштрафован на ХХХ. Если он выбрал белую схему то он НЕ будет оштрафован.#}
+{#    Если второй участник выберет решение о серой схеме, хотели бы вы проинформировать налоговую службу о его решении?#}
+
 {% formfields %}
 {% next_button %}
 
