--- a/creed/templates/creed/Instructions.html
+++ b/creed/templates/creed/Instructions.html
@@ -20,15 +20,21 @@
 
                 <li class="list-group-item">
                     Добро пожаловать на экономический эксперимент!
-                    Мы просим Вас внимательно прочесть инструкции, так как в них будут объяснены правила, по которым Вы будете зарабатывать деньги в соответствии с принятыми Вами решениями.
+                    Мы просим Вас внимательно прочесть инструкции, так как в них будут объяснены правила, по которым Вы
+                    будете зарабатывать деньги в соответствии с принятыми Вами решениями.
                 </li>
 
                 <li class="list-group-item">
-                    Во время эксперимента Вам не разрешается переговариваться с другими участниками.  Если у Вас есть вопросы, пожалуйста, не задавая их вслух, поднимите руку и подождите, пока организаторы эксперимента не подойдут к Вам и не ответят на Ваш вопрос наедине. Если организатор эксперимента сочтёт Ваш вопрос важным для общего понимания правил всеми участниками, он может озвучить вопрос всем участникам игры и ответить на него вслух.
+                    Во время эксперимента Вам не разрешается переговариваться с другими участниками. Если у Вас есть
+                    вопросы, пожалуйста, не задавая их вслух, поднимите руку и подождите, пока организаторы эксперимента
+                    не подойдут к Вам и не ответят на Ваш вопрос наедине. Если организатор эксперимента сочтёт Ваш
+                    вопрос важным для общего понимания правил всеми участниками, он может озвучить вопрос всем
+                    участникам игры и ответить на него вслух.
                 </li>
 
                 <li class="list-group-item">
-                    Вам не разрешается пользоваться никакими электронными устройствами (такими как смартфоны, планшеты, компьютеры, электронные часы и проч.).
+                    Вам не разрешается пользоваться никакими электронными устройствами (такими как смартфоны, планшеты,
+                    компьютеры, электронные часы и проч.).
 
                 </li>
                 <li class="list-group-item">
@@ -43,93 +49,111 @@
 
 
                 <li class="list-group-item">
-                    Сегодняшний эксперимент состоит из 10 периодов, в каждом из которых Вам будет нужно принять решение. В эксперименте будет участвовать 20 человек, разделённых на две равные группы.                </li>
+                    Сегодняшний эксперимент состоит из 10 периодов, в каждом из которых Вам будет нужно принять решение.
+                    В эксперименте будет участвовать 20 человек, разделённых на две равные группы.
+                </li>
 
                 </li>
                 <li class="list-group-item">
-                Сегодня Вы будете играть в роли предпринимателя.
+                    Сегодня Вы будете играть в роли предпринимателя.
                 <li class="list-group-item">
-                Периоды с № 2 по № 10 полностью идентичны, тогда как период № 1 слегка от них отличается.
+                    Периоды с № 2 по № {{ Constants.num_rounds }} полностью идентичны, тогда как период № 1 слегка от
+                    них отличается.
                 <li class="list-group-item">
-                В начале периода № 1 Вы должны выбрать одну из двух возможных схем оплаты труда для своих сотрудников: по “серой” или по “белой”.
+                    В начале периода № 1 Вы должны выбрать одну из двух возможных схем оплаты труда для своих
+                    сотрудников: по “серой” или по “белой”.
                 <li class="list-group-item">
-                В начале каждого последующего периода игры (то есть начиная с периода №2 и вплоть до периода №10 включительно) Вы должны принимать больше решений, помимо решения о схеме оплаты труда.
+                    В начале каждого последующего периода игры (то есть начиная с периода №2 и вплоть до периода
+                    №{{ Constants.num_rounds }}
+                    включительно) Вы должны принимать больше решений, помимо решения о схеме оплаты труда.
                 <li class="list-group-item">
-                После принятия решения о схеме оплаты труда каждый из Вас сможет увидеть решение одного случайно выбранного участника Вашей группы. Точно так же один из участников группы сможет увидеть Ваше решение о выборе схемы.
+                    После принятия решения о схеме оплаты труда каждый из Вас сможет увидеть решение одного случайно
+                    выбранного участника Вашей группы. Точно так же один из участников группы сможет увидеть Ваше
+                    решение о выборе схемы.
                 <li class="list-group-item">
-                Однако, прежде, чем Вы увидите решение другого участника, Вам нужно принять решение о том, будете ли Вы информировать налоговые органы о его решении, если он выбрал “серую” схему.  Если Вы выберете решение об информировании при том условии, что игрок выбрал “серую” схему оплаты труда, то он будет оштрафован на 55 ECU.
+                    Однако, прежде, чем Вы увидите решение другого участника, Вам нужно принять решение о том, будете ли
+                    Вы информировать налоговые органы о его решении, если он выбрал “серую” схему. Если Вы выберете
+                    решение об информировании при том условии, что игрок выбрал “серую” схему оплаты труда, то он будет
+                    оштрафован на 55 ECU.
                 <li class="list-group-item">
-                Решение “информировать” или “не информировать” налоговые органы абсолютно анонимно, так что никто из игроков не будет знать, какой выбор Вы сделали.
+                    Решение “информировать” или “не информировать” налоговые органы абсолютно анонимно, так что никто из
+                    игроков не будет знать, какой выбор Вы сделали.
                 <li class="list-group-item">
-                Эффективность работы правоохранительной системы составляет 50%, поэтому априорная вероятность того, что игрок, выбравший “серую” схему оплаты труда, будет оштрафован, составляет 50%. Размер штрафа составляет 55 ECU. Если игрок, который получает информацию о другом игроке, выбравшем “серую” схему, выбирает опцию “информировать”, то вероятность быть оштрафованным  для игрока, выбравшего “серую” схему, возрастает до 100%. При выборе “не информировать” для игрока, выбравшего “серую” схему, сохраняется априорная вероятность.
+                    Эффективность работы правоохранительной системы составляет {{ subsession.get_prob_proc }}, поэтому
+                    априорная вероятность того,
+                    что игрок, выбравший “серую” схему оплаты труда, будет оштрафован,
+                    составляет {{ subsession.get_prob_proc }}. Размер штрафа
+                    составляет {{ subsession.fine }}. Если игрок, который получает информацию о другом игроке, выбравшем
+                    “серую” схему,
+                    выбирает опцию “информировать”, то вероятность быть оштрафованным для игрока, выбравшего “серую”
+                    схему, возрастает до 100%. При выборе “не информировать” для игрока, выбравшего “серую” схему,
+                    сохраняется априорная вероятность.
                 <li class="list-group-item">
-                Наконец, в завершении периода № 2 вы получите информацию о своих доходах за предыдущий период (№ 1).
+                    Наконец, в завершении периода № 2 вы получите информацию о своих доходах за предыдущий период (№ 1).
                 <li class="list-group-item">
-                Для каждого последующего периода (периода с № 3 и вплоть до № 10) правила будут такими же, как и вышеописанном периоде №2.
+                    Для каждого последующего периода правила будут такими же, как и
+                    вышеописанном периоде №2.
                 <li class="list-group-item">
-                Ваш выигрыш, накапливающийся на протяжении всей сессии, будет зависеть как от Вашего собственного выбора, так и от выбора других участников.
+                    Ваш выигрыш, накапливающийся на протяжении всей сессии, будет зависеть как от Вашего собственного
+                    выбора, так и от выбора других участников.
                 <li class="list-group-item">
 
-                (1): Если вы выбрали “серую” схему оплаты труда, то чем большее количество людей выберут “серую” схему оплаты труда, тем меньше будет Ваша прибыль
-                 <li class="list-group-item">
-                (2): Если вы выбрали “серую” схему оплаты труда, то чем большее количество людей выберут “белую” схему оплаты труда, тем больше будет Ваша прибыль.
-                 <li class="list-group-item">
-                (3): Если в выбрали “белую” схему оплаты труда, то чем большее количество людей выберут “серую” схему оплаты труда, тем меньше будет Ваша прибыль.
-                 <li class="list-group-item">
-                (4): Если вы выбрали “белую” схему оплаты труда, то чем большее количество людей выберут “белую” схему оплаты труда, тем больше будет Ваша прибыль.
+                    (1): Если вы выбрали “серую” схему оплаты труда, то чем большее количество людей выберут “серую”
+                    схему оплаты труда, тем меньше будет Ваша прибыль
+                <li class="list-group-item">
+                    (2): Если вы выбрали “серую” схему оплаты труда, то чем большее количество людей выберут “белую”
+                    схему оплаты труда, тем больше будет Ваша прибыль.
+                <li class="list-group-item">
+                    (3): Если в выбрали “белую” схему оплаты труда, то чем большее количество людей выберут “серую”
+                    схему оплаты труда, тем меньше будет Ваша прибыль.
+                <li class="list-group-item">
+                    (4): Если вы выбрали “белую” схему оплаты труда, то чем большее количество людей выберут “белую”
+                    схему оплаты труда, тем больше будет Ваша прибыль.
 
                 <li class="list-group-item">
-                К примеру, если Вы выбрали схему оплату труда А и в предыдущем, и в текущем периодах, при этом Ваш доход в текущем периоде увеличился в сравнении с предыдущим периодом, это значит, что в текущем периоде большее количество участников выбрало схему оплату труда А в сравнении с предыдущим периодом.
+                    К примеру, если Вы выбрали схему оплату труда А и в предыдущем, и в текущем периодах, при этом Ваш
+                    доход в текущем периоде увеличился в сравнении с предыдущим периодом, это значит, что в текущем
+                    периоде большее количество участников выбрало схему оплату труда А в сравнении с предыдущим
+                    периодом.
 
                 <li class="list-group-item font-weight-bold text-center">
-                Выплаты
+                    Выплаты
 
                 </li>
 
 
                 <li class="list-group-item">
-                    После того, как игра из 10 периодов подойдёт к концу, Вам будет выплачен накопленный за все периоды доход в рублях. Экспериментальная денежная единица (ECU) имеет следующий обменный курс: 1 ECU = 5 рублей. Сумма, которую Вы заработали, будет выплачена лично Вам после окончания эксперимента индивидуально. Кроме того вы получите 150 рублей за факт участия в сегодняшней игры.
+                    После того, как игра из {{ Constants.num_rounds }} периодов подойдёт к концу, Вам будет выплачен
+                    накопленный за все периоды доход в рублях. Экспериментальная денежная единица (ECU) имеет следующий
+                    обменный курс: 1 ECU = 5 рублей. Сумма, которую Вы заработали, будет выплачена лично Вам после
+                    окончания эксперимента индивидуально. Кроме того вы получите 150 рублей за факт участия в
+                    сегодняшней игры.
                 <li class="list-group-item">
-                NB! Вы не получите никакого денежного вознаграждения, если вы будете уличены в переговорах с другими участниками эксперимента и/или использовании электронных устройств во время экспериментов.
+                    NB! Вы не получите никакого денежного вознаграждения, если вы будете уличены в переговорах с другими
+                    участниками эксперимента и/или использовании электронных устройств во время экспериментов.
                 <li class="list-group-item">
                 <li class="list-group-item font-weight-bold text-center">
 
-                Вопросы?
+                    Вопросы?
                 </li>
                 <li class="list-group-item">
-                    Сейчас подошло время вопросов. Если у Вас есть вопросы, пожалуйста, тихо поднимите руку и подождите, пока организаторы эксперимента не подойдут к Вам и не ответят на Ваш вопрос наедине. Если организатор эксперимента сочтёт Ваш вопрос важным для общего понимания правил для всех участников, он может озвучить вопрос всем участникам игры и ответить на него вслух.
+                    Сейчас подошло время вопросов. Если у Вас есть вопросы, пожалуйста, тихо поднимите руку и подождите,
+                    пока организаторы эксперимента не подойдут к Вам и не ответят на Ваш вопрос наедине. Если
+                    организатор эксперимента сочтёт Ваш вопрос важным для общего понимания правил для всех участников,
+                    он может озвучить вопрос всем участникам игры и ответить на него вслух.
                 </li>
 
                 <li class="list-group-item font-weight-bold text-center">
                     Проверочные задания
                 </li>
                 <li class="list-group-item">
-                    Прежде чем продолжить эксперимент, мы просим Вас пройти следующий тест. Отвечая на эти вопросы, не стесняйтесь обращаться к инструкциям и таблицам. Ваши ответы на этот тест не влияют на Ваш выигрыш ни в коем случае. Пожалуйста, впишите или обведите выбранные ответы на вопросы проверочных заданий. Если на какие-либо из вопросов будут даны неправильные ответы, мы попросим Вас обратиться к инструкциям еще раз и исправить ошибки.
+                    Прежде чем продолжить эксперимент, мы просим Вас пройти следующий тест. Отвечая на эти вопросы, не
+                    стесняйтесь обращаться к инструкциям и таблицам. Ваши ответы на этот тест не влияют на Ваш выигрыш
+                    ни в коем случае. Пожалуйста, впишите или обведите выбранные ответы на вопросы проверочных заданий.
+                    Если на какие-либо из вопросов будут даны неправильные ответы, мы попросим Вас обратиться к
+                    инструкциям еще раз и исправить ошибки.
                 </li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-{#                <li class="list-group-item">#}
-{#                    <h5 class="text-center font-weight-bold">#}
-{#                        1 ECU = {{ session.config.real_world_currency_per_point }} {{ ending }}#}
-{#                        1 ECU = 4 руб.#}
-{#                    </h5>#}
-{##}
-{#                </li>#}
 
                 <li class="list-group-item font-weight-bold text-center">
                     Есть ли у Вас вопросы?
