--- a/creed/templates/creed/Results.html
+++ b/creed/templates/creed/Results.html
@@ -42,11 +42,12 @@
                 <td>В прошлом периоде ваше решение об информировании о решении другой фирмы:</td>
                 <td>{{ player.in_previous_round.get_wb_display }}</td>
             </tr>
-            <tr>
-                <td>Вторая фирма в прошлом раунде приняла решение о схеме зарплаты:</td>
-                <td>{{ player.get_partner.get_white_display }}</td>
-            </tr>
         {% endif %}
+        <tr>
+            <td>Та фирма, о чьем решении вы могли информировать в прошлом раунде, приняла решение о схеме зарплаты:</td>
+            <td>{{ player.get_partner.get_white_display }}</td>
+        </tr>
+
     </table>
     {% next_button %}
 {% endblock %}
