lang and wrapper

--- a/creed/templates/creed/Salary.html
+++ b/creed/templates/creed/Salary.html
@@ -8,5 +8,5 @@
 {% block content %}
     {% formfields %}
     {% next_button %}
-
+{% include 'creed/includes/instructions_wrapper.html' %}
 {% endblock %}
