--- a/creed/templates/creed/WB.html
+++ b/creed/templates/creed/WB.html
@@ -2,18 +2,24 @@
 {% load otree static %}
 
 {% block title %}
-Донос. Период {{ player.round_number }} из {{ Constants.num_rounds }}
+    Донос. Период {{ player.round_number }} из {{ Constants.num_rounds }}
 {% endblock %}
 
 {% block content %}
-    После того, как Вы приняли решение о том, какую схему оплаты труда Вам выбрать для своих работников, каждый из Вас сможет увидеть решение одного случайно выбранного участника Вашей группы. Точно так же один из участников группы сможет увидеть Ваше решение о выборе схемы. Во-вторых, прежде, чем Вы увидите решение другого участника, Вам нужно принять решение о том, будете ли Вы информировать налоговые органы о его решении, если он выбрал серую “схему” оплаты труда.  Если Вы выберете решение об информировании при том условии, что игрок выбрал “серую” схему оплаты труда, то он будет оштрафован на 55 ECU.
-    На этом этапе Вы должны решить, будете ли Вы “информировать” или “не информировать” налоговые органы. Это действие абсолютно анонимно, так что никто из игроков не будет знать, какой выбор Вы сделали.
+    После того, как Вы приняли решение о том, какую схему оплаты труда Вам выбрать для своих работников, каждый из Вас
+    сможет увидеть решение одного случайно выбранного участника Вашей группы. Точно так же один из участников группы
+    сможет увидеть Ваше решение о выборе схемы. Во-вторых, прежде, чем Вы увидите решение другого участника, Вам нужно
+    принять решение о том, будете ли Вы информировать налоговые органы о его решении, если он выбрал серую “схему”
+    оплаты труда.  Если Вы выберете решение об информировании при том условии, что игрок выбрал “серую” схему оплаты
+    труда, то он будет оштрафован на 55 ECU.
+    На этом этапе Вы должны решить, будете ли Вы “информировать” или “не информировать” налоговые органы. Это действие
+    абсолютно анонимно, так что никто из игроков не будет знать, какой выбор Вы сделали.
 
 
 
 
 
-{% formfields %}
-{% next_button %}
-
+    {% formfields %}
+    {% next_button %}
+    {% include 'creed/includes/instructions_wrapper.html' %}
 {% endblock %}
