--- a/creed/templates/creed/WB.html
+++ b/creed/templates/creed/WB.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-    Донос. Период {{ player.round_number }} из {{ Constants.num_rounds }}
+    Информирование. Период {{ player.round_number }} из {{ Constants.num_rounds }}
 {% endblock %}
 
 {% block content %}
@@ -10,8 +10,8 @@
     сможет увидеть решение одного случайно выбранного участника Вашей группы. Точно так же один из участников группы
     сможет увидеть Ваше решение о выборе схемы. Во-вторых, прежде, чем Вы увидите решение другого участника, Вам нужно
     принять решение о том, будете ли Вы информировать налоговые органы о его решении, если он выбрал серую “схему”
-    оплаты труда.  Если Вы выберете решение об информировании при том условии, что игрок выбрал “серую” схему оплаты
-    труда, то он будет оштрафован на 55 ECU.
+    оплаты труда.  Если Вы выберете решение об инфор`мировании при том условии, что игрок выбрал “серую” схему оплаты
+    труда, то он будет оштрафован на {{ subsession.fine }}.
     На этом этапе Вы должны решить, будете ли Вы “информировать” или “не информировать” налоговые органы. Это действие
     абсолютно анонимно, так что никто из игроков не будет знать, какой выбор Вы сделали.
 
